# shaarlirs

./: .gitignore  Cargo.toml  Dockerfile  README.md  gettoken.py  sample.http
migrations/: 20221026042901_link.up.sql  20221026043157_tag.up.sql  20221026043208_link_tag.down.sql  20221026043208_link_tag.up.sql  20221120100002_history.down.sql  20221120100002_history.up.sql
src/: main.rs
src/models/: claim.rs  general.rs  history.rs  link.rs  link_tag.rs  metatag.rs  mod.rs  short_url.rs  tag.rs
src/routes/: general.rs  history.rs  links.rs  mod.rs  tags.rs
