[package]
name = "shaarlirs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]

[dependencies]
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "sqlite", "macros", "offline", "chrono"]}
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
reqwest = "0.11"
actix-rt = "2.7"
openssl = { version = "0.10", features = ["vendored"] }
